# telemetry

./: CMakeLists.txt  Dockerfile  Makefile  README.md  result.py
api/: openapi.yml
docker/: Dockerfile  Dockerfile.emitter
helm/gputelemetry/templates/: deployment.yml
include/: sqlite3.lib
src/: emitter.cpp  main.cpp  server.cpp  server.h  storage.cpp  storage.h  telemetry.cpp  telemetry.h  utils.cpp
tests/: CMakeLists.txt  storage_test.cpp
